[package]
name = "hivemind"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
arrayvec = "0.7.4"
clap = { version = "4.5.1", features = ["derive"] }
dashmap = "5.5.3"
dotenvy = "0.15.7"
env_logger = "0.11.2"
flexi_logger = { version = "0.27.4", features = ["colors"] }
itertools = "0.12.1"
lazy_static = "1.4.0"
log = "0.4.20"
mini-moka = "0.10.3"
multiset = "0.0.5"
rand = "0.8.5"
regex = "1.10.3"

[profile.release]
lto = "fat"
strip = true

[profile.flame]
inherits = "release"
strip = false
debug = true

[lib]
name = "hivemind"
test = false

[[bin]]
name = "hivemind"
test = false
